martin/src/tui/snapshots/martin__tui__tests__a_fresh_dashboard_shows_the_address_and_an_empty_map.snap
---
source: martin/src/tui/tests.rs
expression: "render(&dashboard, started + Duration::from_secs(5))"
---
" Martin v2.0.0  http://127.0.0.1:3000/  up 00:00:05  0 requests  0 error q quit   c clear counters "
"┌ Sources ─────────────────────────────┐┌ Tile requests, last minute ──────────────────────────────┐"
"│source   requests errors avg ms last z││             ⢀⣀⣤⢤⣤⣤⣄⣠⣠⠤⢄⢠⣠⣀⡀  ⢀⣀⣀⡀  ⣀⡀     ⢀⣀⡀            │"
"│                                      ││⣤⡀⣀⠤⠤⢄⣀⣀⣤⣾⣿⣿⣿⣿⣿⣟⣿⡭⣗⠒⣦  ⢀⣠⡾⠁   ⠈⣉⡭⢤⣀⣀⣀⢴⣖⣻⣤⠴⠖⠒⠋⠉⠛⠒⠴⠢⠴⠶⠲⠆⢤⣀⣀⣠│"
"│                                      ││⠉⠙⢿⣧⣴⠤⠤⢤⡀    ⠠⣞⣛⢿⠳⠿⣅⠙⠦⠎⠉ ⠛⠋⢀⣤⠰⣮⣰⣿⠥⠙⠉⠉   ⠉          ⡠⠤⢤⣶⡦⠔⠛│"
"│                                      ││  ⠈    ⠈⠛⡆     ⠈⠃⢠⣶⡾⠧      ⣛⣿⣛⣉⣉⠁⣠⣤⣄⣠⡤            ⣈⣿⡂⠘⠋   │"
"│                                      ││         ⠣⣄    ⢀⡴⠋         ⣺⠶⠗⢻⣛⣻⣿⣿⠉⠘⠛         ⠐⡟⢿⣴⠟      │"
"│                                      ││   ⢤⡀     ⠙⠷⡄⣏⣩⡽⣷⣀⡀       ⡼⠁    ⠁ ⢻⣄⠘⠷⡶⠲⣤ ⢠⢤ ⢀⣤⠴⣏         │"
"│                                      ││            ⠉⠉⠛⢿⣭⢽⠭⣄      ⢧⡀ ⣀     ⠹⢶⠏⠁ ⠘⣼⡁ ⢹⣮⠇⢠⣿⡆        │"
"│                                      ││               ⢀⡞  ⠈⠹⠦⢤⡀   ⠉⠉⠉⢿    ⡴⠊    ⠈  ⠹⣿⣶⣹⣷⣷⣤⣤⣀⣄    │"
"│                                      ││⡀               ⢱⣀    ⢰⠃      ⢨⠇  ⢀⡧⣴⡄       ⠈⠉⠉⢻⠵⢿⣹⡝⠊⠛⢠ ⣀│"
"│                                      ││                 ⢸   ⡔⠋        ⣇ ⢀⡼⠸⠽          ⡎⠁   ⠙⣆ ⠓  │"
"│                                      ││                 ⡞⢀⡴⠊          ⠘⠒⠋             ⠓⠚⠉⠙⠧⣴⠃  ⣰⡦│"
"└──────────────────────────────────────┘│                ⠰⣧⣟⣤                   ⠠⠆           ⠉  ⠘⠋ │"
"┌ Requests per second, last minute ────┐│                 ⠈⣉⣤                ⢀⣀⡀   ⢀⣀⣀⣀⣀⣀⣀⣀⣀⣀⡀     │"
"│                                      ││  ⢀⣀⣀⣠⠤⠤⠤⠤⠤⠤⠶⠶⠶⠦⢦⣾⠯⠇⢀⣀⡀⣀⣀⠤⠴⠒⠒⠒⠛⠋⠑⠚⠉⠉⠉ ⠉⠙⠛⠉⠉⠉⠉  ⠈⠁   ⠉⠉⢙⣶⠆ │"
"│                                      ││⠒⠒⠒⠛⠛⠟⠂         ⠈⠉⠉⠓⠋⠉⠉⠉⠁                             ⠈⠒⠒⠒│"
"└──────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"┌ Log   l expand ──────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
