martin/src/tui/snapshots/martin__tui__tests__an_expanded_log_takes_the_screen.snap
---
source: martin/src/tui/tests.rs
expression: "render(&dashboard, started + Duration::from_secs(5), LogView\n{ size: LogSize::Expanded, scroll: 0, })"
---
" Martin v0.0.0  http://127.0.0.1:3000/  up 00:00:05  0 requests  0 errors q quit   c clear counters "
"┌ Log   l shrink ──────────────────────────────────────────────────────────────────────────────────┐"
"│INFO Starting Martin                                                                              │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
