martin/src/tui/snapshots/martin__tui__tests__requests_fill_the_sources_the_map_and_the_rate.snap
---
source: martin/src/tui/tests.rs
expression: "render(&dashboard, at(20), LogView::default())"
---
" Martin v0.0.0  http://127.0.0.1:3000/  up 00:00:20  7 requests  1 errors q quit   c clear counters "
"┌ Sources ─────────────────────────────┐┌ Tile requests, last minute ──────────────────────────────┐"
"│source   requests errors avg ms last z││             ⢀⣀⣤⢤⣤⣤⣄⣠⣠⠤⢄⢠⣠⣀⡀  ⢀⣀⣀⡀  ⣀⡀     ⢀⣀⡀            │"
"│berlin   3        0      9.7    14    ││⣤⡀⣀⠤⠤⢄⣀⣀⣤⣾⣿⣿⣿⣿⣿⣟⣿⡭⣗⠒⣦  ⢀⣠⡾⠁   ⠈⣉⡭⢤⣀⣀⣀⢴⣖⣻⣤⠴⠖⠒⠋⠉⠛⠒⠴⠢⠴⠶⠲⠆⢤⣀⣀⣠│"
"│world    2        1      2.0    5     ││⠉⠙⢿⣧⣴⠤⠤⢤⡀    ⠠⣞⣛⢿⠳⠿⣅⠙⠦⠎⠉ ⠛⠋⢀⣤⠰⣮⣰⣿⠥⠙⠉⠉   ⠉          ⡠⠤⢤⣶⡦⠔⠛│"
"│munich   1        0      30.0   12    ││  ⠈    ⠈⠛⡆     ⠈⠃⢠⣶⡾⠧      ⣛⣿⣛⣙⣉⠁⣠⣤⣄⣠⡤            ⣈⣿⡂⠘⠋   │"
"│                                      ││       ⡀ ⠣⣄    ⢀⡴⠏         ⣺⠶⠗⢻⣛⣻⣿⣿⠉⠘⠛         ⠐⡟⢿⣴⠟      │"
"│                                      ││   ⢤⡀     ⠙⠷⡄⣏⣩⡽⣷⣀⡀       ⡼⠁    ⠁ ⢻⣄⠘⠷⡶⠲⣤ ⢠⢤ ⢀⣤⠴⣏         │"
"│                                      ││            ⠉⠉⠛⢿⣭⢽⠭⣄      ⢧⡀ ⣀     ⠹⢶⠏⠁ ⠘⣼⡁ ⢹⣮⠇⢠⣿⡆        │"
"│                                      ││               ⢀⡞  ⠈⠹⠦⢤⡀   ⠉⠉⠉⢿    ⡴⠊    ⠈  ⠹⣿⣶⣹⣷⣷⣤⣤⣀⣄    │"
"│                                      ││⡀               ⢱⣀    ⢰⠃      ⢨⠇  ⢀⡧⣴⡄       ⠈⠉⠉⢻⠵⢿⣹⡝⠊⠛⢠ ⣀│"
"│                                      ││                 ⢸   ⡔⠋        ⣇ ⢀⡼⠸⠽          ⡎⠁   ⠙⣆ ⠓  │"
"│                                      ││                 ⡞⢀⡴⠊          ⠘⠒⠋             ⠓⠚⠉⠙⠧⣴⠃  ⣰⡦│"
"└──────────────────────────────────────┘│                ⠰⣧⣟⣤                   ⠠⠆           ⠉  ⠘⠋ │"
"┌ Requests per second, last minute ────┐│                 ⠈⣉⣤                ⢀⣀⡀   ⢀⣀⣀⣀⣀⣀⣀⣀⣀⣀⡀     │"
"│                                      ││  ⢀⣀⣀⣠⠤⠤⠤⠤⠤⠤⠶⠶⠶⠦⢦⣾⠯⠇⢀⣀⡀⣀⣀⠤⠴⠒⠒⠒⠛⠋⠑⠚⠉⠉⠉ ⠉⠙⠛⠉⠉⠉⠉  ⠈⠁   ⠉⠉⢙⣶⠆ │"
"│                                      ││⠒⠒⠒⠛⠛⠟⠂         ⠈⠉⠉⠓⠋⠉⠉⠉⠁                             ⠈⠒⠒⠒│"
"└──────────────────────────────────────┘└──────────────────────────────────────────────────────────┘"
"┌ Log   l expand ──────────────────────────────────────────────────────────────────────────────────┐"
"│INFO Starting Martin                                                                              │"
"│WARN Table public.points1 has no spatial index on column geom                                     │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
