martin/src/tui/snapshots/martin__tui__tests__the_log_keeps_another_format_as_written.snap
---
source: martin/src/tui/tests.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 110, height: 6 },
    content: [
        " Martin v2.0.0  http://127.0.0.1:3000/  up 00:00:01  0 requests  0 errors  0.0 req q quit   c clear counters ",
        "┌ Log   l shrink ────────────────────────────────────────────────────────────────────────────────────────────┐",
        "│{"timestamp":"2026-09-05T09:41:12.123456Z","level":"INFO","fields":{"message":"Starting Martin","port":3000}│",
        "│    at a line the pretty format would take for a note                                                       │",
        "│                                                                                                            │",
        "└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 16, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 109, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
