martin/src/tui/snapshots/martin__tui__tests__the_log_paints_the_parts_of_a_line_the_way_pretty_does.snap
---
source: martin/src/tui/tests.rs
expression: terminal.backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 110, height: 8 },
    content: [
        " Martin v0.0.0  http://127.0.0.1:3000/  up 00:00:01  0 requests  0 errors  0.0 req/ q quit   c clear counters ",
        "┌ Log   l shrink ────────────────────────────────────────────────────────────────────────────────────────────┐",
        "│  2026-09-05T09:41:12.123456Z  INFO martin::srv::server: Starting Martin, port: 3000                        │",
        "│    at martin/src/srv/server.rs:120                                                                         │",
        "│  2026-09-05T09:41:13.654321Z  WARN martin::pg::table: Table public.points1 has no spatial index, column: "g│",
        "│    at martin/src/pg/table.rs:88                                                                            │",
        "│    in martin::pg::configure with source: "points1"                                                         │",
        "└────────────────────────────────────────────────────────────────────────────────────────────────────────────┘",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 15, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 83, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 30, y: 2, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 37, y: 2, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 56, y: 2, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 75, y: 2, fg: Green, bg: Reset, underline: Reset, modifier: BOLD,
        x: 79, y: 2, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 85, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM | ITALIC,
        x: 7, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 3, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 30, y: 4, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 37, y: 4, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 54, y: 4, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 99, y: 4, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 105, y: 4, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 109, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM | ITALIC,
        x: 7, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 5, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM | ITALIC,
        x: 7, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 29, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM | ITALIC,
        x: 34, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 41, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
